@@ -1,0 +1,2 @@
+# Time-stamp: <02/09/04 12:58:13 smulloni>
+# $Id: __init__.py,v 1.1 2002/09/04 19:05:25 smulloni Exp $
